# demo-cmake

./: CMakeLists.txt  path.cpp  path.hpp  platform.hpp
.github/workflows/: linux.yml  windows.yml
tests/: path_test.cpp
